# tuatara

./: .clang-format  .lgtm.yml  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md
.github/workflows/: clang-format-check.yml  googletest.yml
examples/: example.tta
include/: FlexLexer.h  ast.h  common.h  driver.h  json.h  macro_map.h  named.h  printer.h  scanner.h  test_util.h
include/ast/: array.h  assignment.h  ast.h  block.h  bool.h  call.h  class_declaration.h  declaration.h  expression.h  field.h  float.h  func.h  func_declaration.h  func_impl.h  ident_access.h  if.h  if_else.h  index.h  infix_operator.h  int.h  lambda.h  literal.h  lvalue.h  match.h  none.h  operator.h  postfix_operator.h  prefix_operator.h  return.h  statement.h  string.h  stub.h  tuple.h  type_declaration.h  type_value_declaration.h  typed_variable.h  unit.h  value_declaration.h  variable.h  while.h
include/pattern/: constraint.h  literal.h  named_constraint.h  named_wildcard.h  pattern.h  tuple.h  type_constraint.h  value_constraint.h  wildcard.h
include/type/: array.h  class.h  func.h  maybe.h  object.h  product.h  sum.h  tuple.h  type.h  type_context.h  type_exception.h  unit.h
src/: ast.cpp  driver.cpp  json.cpp  main.cpp  parse_grammar.py  parser.y  printer.cpp  report_syntax_error.cpp  scanner.l
src/ast/: array.cpp  assignment.cpp  ast.cpp  block.cpp  bool.cpp  call.cpp  class_declaration.cpp  declaration.cpp  expression.cpp  field.cpp  float.cpp  func.cpp  func_declaration.cpp  func_impl.cpp  ident_access.cpp  if.cpp  if_else.cpp  index.cpp  infix_operator.cpp  int.cpp  lambda.cpp  literal.cpp  lvalue.cpp  match.cpp  none.cpp  operator.cpp  postfix_operator.cpp  prefix_operator.cpp  return.cpp  statement.cpp  string.cpp  stub.cpp  tuple.cpp  type_declaration.cpp  type_value_declaration.cpp  typed_variable.cpp  unit.cpp  value_declaration.cpp  variable.cpp  while.cpp
src/pattern/: constraint.cpp  literal.cpp  named_constraint.cpp  named_wildcard.cpp  pattern.cpp  tuple.cpp  type_constraint.cpp  value_constraint.cpp  wildcard.cpp
src/type/: array.cpp  class.cpp  func.cpp  maybe.cpp  object.cpp  product.cpp  sum.cpp  tuple.cpp  type.cpp  type_context.cpp  type_exception.cpp  unit.cpp
test/: ast.cpp  json.cpp  node.cpp  parser.cpp  pattern.cpp  scanner.cpp  test_example.cpp  test_json.cpp  type.cpp
test/ast/: array.cpp  block.cpp  bool.cpp  call.cpp  field.cpp  float.cpp  func.cpp  func_decl.cpp  func_impl.cpp  ident_access.cpp  if.cpp  if_else.cpp  index.cpp  int.cpp  lambda.cpp  match.cpp  string.cpp  tuple.cpp  type_decl.cpp  type_value_decl.cpp  unit.cpp  value_decl.cpp  variable.cpp  while.cpp
test/pattern/: literal.cpp  named_wildcard.cpp  tuple.cpp  type_constraint.cpp  value_constraint.cpp  wildcard.cpp
test/type/: array.cpp  func.cpp  maybe.cpp  object.cpp  product.cpp  sum.cpp  unit.cpp
